# claude-plugins

./: README.md
.claude-plugin/: marketplace.json
.cursor-plugin/: marketplace.json
agent-reflection/: README.md
agent-reflection/.claude-plugin/: plugin.json
agent-reflection/.cursor-plugin/: plugin.json
agent-reflection/agents/: improvement-implementer.md  session-reflector.md
agent-reflection/hooks/: hooks-cursor.json  hooks.json  stop-reflect.sh
ci-monitoring/: AGENTS.md  README.md
ci-monitoring/.claude/: CLAUDE.md  settings.json
ci-monitoring/.claude-plugin/: plugin.json
ci-monitoring/.cursor-plugin/: plugin.json
ci-monitoring/agents/: sippy-interop-jobs.md  spreadsheet-updater.md
ci-monitoring/commands/: analyze-prow-logs.md  orchestrate.md
ci-monitoring/mcp/: AGENTS.md
ci-monitoring/mcp/loki/: AGENTS.md  Dockerfile  pyproject.toml
ci-monitoring/mcp/loki/src/loki_mcp/: __init__.py  client.py  queries.py  server.py
ci-monitoring/mcp/sippy/: AGENTS.md  Dockerfile  api-discovery.md  pyproject.toml
ci-monitoring/mcp/sippy/src/sippy_mcp/: __init__.py  client.py  server.py
ci-monitoring/mcp/watcher/: AGENTS.md  Dockerfile  pyproject.toml
ci-monitoring/mcp/watcher/config/: default.yaml
ci-monitoring/mcp/watcher/src/watcher_mcp/: __init__.py  config.py  server.py
ci-monitoring/mcp/watcher/src/watcher_mcp/clients/: __init__.py  jira.py
ci-monitoring/mcp/watcher/src/watcher_mcp/tools/: __init__.py  registry.py  tickets.py  triage.py
ci-monitoring/rules/: mcp-tool-expansion.mdc  (+1 more)
interop-standards/: AGENTS.md  README.md
(+46 files in other folders)
