[project]
name = "loki-mcp"
version = "0.1.0"
description = "MCP server for querying Grafana Loki CI logs"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
]

[project.scripts]
loki-mcp = "loki_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loki_mcp"]
