[project]
name = "sippy-mcp"
version = "0.1.0"
description = "MCP server for Sippy CI job monitoring"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
]

[project.scripts]
sippy-mcp = "sippy_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sippy_mcp"]
